--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
     "require": {
         "phpmailer/phpmailer": "^7.0"
+    },
+
+    "autoload": {
+    "psr-4": {
+        "App\\Covoiturage\\": "projet/src/"
     }
+    }
+
 }
